@@ -1,10 +1,10 @@
 package week1;
 
-public class test
-{
-	public static void main(String[] args)
-	{
-		System.out.println("test");
-		System.out.println(System.getProperties());
+// test for policy manager
+// # java -Djava.security.manager -Djava.security.policy=test.policy EvilEmpire
+
+public class test {
+	public static void main(String[] args) {
+		System.out.println("132");
 	}
 }
